weird fix for header flicker on journal entries

--- a/src/styles/partials/_typography.css
+++ b/src/styles/partials/_typography.css
@@ -45,7 +45,7 @@ h2 {
 
   @screen xl {
     font-size: 6.75vw;
-    line-height: 5.25vw;
+    line-height: 5.3vw;
   }
 }
 
